examples/type_system/failing/42_handle_unknown_effect.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/42_handle_unknown_effect.flx
// error[E402]: Missing Effect Handler Arm
//
// Handler for `Console` is missing operations: println.
//
//   examples/type_system/failing/42_handle_unknown_effect.flx:28:13
//    |
// 28 |     let _ = 1 handle Console {
//    |             ^
//    |             - handled expression
//
// Hint:
//   Add 1 arm(s) to the handle block:
//
//     println(resume, _arg1) -> resume(())
//
// Tip: `resume(())` consumes the operation and discards its effect; use it when the handler only cares about observing the call.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E402

// E405: handling an undeclared effect should fail statically.

fn main() -> Unit with IO {
    let _ = 1 handle Console {
        print(resume, _msg) -> resume(())
    };
    print("done")
}
